gu7000 driver fixes, screensaver, uart optimizations

--- a/pydPiper.cfg
+++ b/pydPiper.cfg
@@ -2,27 +2,30 @@
 startup_msg_duration = 5
 
 [DISPLAY]
-display_driver = winstar_weg
+display_driver = gu7000
 display_pin_rs = 7
 display_pin_e = 8
 display_pin_d4 = 25
 display_pin_d5 = 24
 display_pin_d6 = 23
 display_pin_d7 = 27
-display_width = 80
-display_height = 16
+display_width = 140
+display_height = 32
 display_enable_duration = 0.1
-pagefile = pages_weh_80x16.py
+pagefile = pages_gu7000.py
 animation_smoothing = 0.1
+display_serial_port = /dev/ttyAMA0
+display_serial_baudrate = 115200
 
 [SYSTEM]
 logfile = /var/log/pydPiper.log
 loglevel = info
-timezone = US/Eastern
+timezone = Asia/Yekaterinburg
 time24hour = false
-temperature = fahrenheit
+temperature = celsius
 
 [SOURCE]
 source_type = volumio
 volumio_server = localhost
 volumio_port = 3000
+
